@@ -1,6 +1,6 @@
 <HTML>
 <!-- THIS PAGE IS AUTOMATICALLY GENERATED.  DO NOT EDIT. -->
-<!-- Mon Feb 25 17:58:36 2002 -->
+<!-- Wed Feb 27 15:47:00 2002 -->
 <!-- USING HT2HTML 1.2 -->
 <!-- SEE http://barry.wooz.org/software/ht2html -->
 <!-- User-specified headers:
@@ -163,8 +163,9 @@ Windows.<br><br>
 allowing fine-grained control over how incoming and outgoing mail is
 disposed of.<br><br>
 
-<li>Local mail delivery, including the ability to deliver to a program
-(pipe), or forward to an e-mail address.<br><br>
+<li>Local mail delivery, including qmail-style Maildirs, mboxrd-format
+mboxes, program (pipe) delivery, and e-mail address
+forwarding.<br><br>
 
 <li>Supports DBM and <a href="http://cr.yp.to/cdb.html" TARGET="Resource Window">
 CDB</a> databases, including on-demand auto-regeneration of DB files.<br><br>
