@@ -1,3 +1,7 @@
+2002-02-27  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
+
+	* features.ht (Links): Add Maildir and mbox delivery.
+
 2002-02-25  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
 
 	* features.ht (Links): Mention filtering language, local mail
