@@ -1,5 +1,7 @@
 2002-02-27  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
 
+	* THANKS (Contributions): Add Charles Cazabon.
+
 	* COPYING: New file containing the GNU General Public License
 	text.  This replaces COPYRIGHT.
 
